Renaming our dropdown CSS class to dropdown-container to avoid conflicts with foundation's existing one; re-added dropdown to tree-select's button so that down arrow is visible.

--- a/src/styles/components/dropdown.scss
+++ b/src/styles/components/dropdown.scss
@@ -3,7 +3,7 @@
 @import '../colours';
 @import '../common/z-index';
 
-.dropdown {
+.dropdown-container {
   position: relative;
   display: inline-block;
   &>.button {
